# authenticator-rs

./: Cargo.toml
src/: consts.rs  ctap.rs  lib.rs  statemachine.rs  transport.rs  u2fprotocol.rs  u2ftypes.rs  util.rs
src/ctap2/: attestation.rs  mod.rs  server.rs
src/ctap2/commands/: client_pin.rs  get_assertion.rs  get_info.rs  get_next_assertion.rs  get_version.rs  make_credentials.rs  mod.rs
src/transport/: hid.rs  mod.rs
src/transport/freebsd/: device.rs
src/transport/linux/: device.rs  transaction.rs
src/transport/macos/: monitor.rs
src/transport/netbsd/: uhid.rs
src/transport/test/: commands.rs  crypto.rs  device.rs  transaction.rs
