[package]
name = "authenticator"
version = "0.3.1"
authors = ["J.C. Jones <jc@mozilla.com>", "Tim Taubert <ttaubert@mozilla.com>", "Kyle Machulis <kyle@nonpolynomial.com>"]
keywords = ["ctap2", "u2f", "fido", "webauthn"]
categories = ["cryptography", "hardware-support", "os"]
repository = "https://github.com/mozilla/authenticator-rs/"
license = "MPL-2.0"
description = "Library for interacting with CTAP1/2 security keys for Web Authentication. Used by Firefox."
edition = "2018"

[badges]
travis-ci = { repository = "mozilla/authenticator-rs", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
#default = ["serde", "serde_json"]
binding-recompile = ["bindgen"]
webdriver = ["bytes", "warp", "tokio"]

[target.'cfg(target_os = "linux")'.dependencies]
libudev = "^0.2"

[target.'cfg(target_os = "freebsd")'.dependencies]
devd-rs = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "^0.3"
features = [
    "handleapi",
    "hidclass",
    "hidpi",
    "hidusage",
    "setupapi",
]

[build-dependencies]
bindgen = { version = "^0.51", optional = true }

[dependencies]
rand = "0.7"
log = "0.4"
libc = "0.2"
runloop = "0.1.0"
bitflags = "1.0"
tokio = { version = "0.2", optional = true, features = ["macros"] }
warp = { version = "0.2.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_bytes = "0.11"
#cose = {git = "https://github.com/franziskuskiefer/cose-rust"}
cose = {path = "/mnt/hdd/repos/cose-rust"}
serde_json = { version = "1.0" }
bytes = { version = "0.5", optional = true, features = ["serde"] }
base64 = "^0.10"
sha2 = "^0.8.2"
nom = "^5.1"

[dev-dependencies]
env_logger = "^0.6"
getopts = "^0.2"
assert_matches = "1.2"
